--- a/src/views/pages/partials/header.mustache
+++ b/src/views/pages/partials/header.mustache
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <a href="/">PetDevShop</a>
+        <a href="/">PetShopLhz</a>
         <form method="GET" action="/seacher">
             <input type="search" name="q" placeholder="Pesquise por raça" value = "{{ query }}" />
         </form>
